themes/cp_theme_d10/css/page.css
/* ... */
/* Overriding styles that come with MailerLite forms */

#block-cp-theme-d10-content .ml-embedded .ml-form-embedContainer .ml-form-embedWrapper.embedForm {
  max-width: unset;
  background-color: rgba(255,255,255,0) !important;

  .ml-form-embedBody .ml-form-horizontalRow button {
    border-radius: 100px;
    background-color: var(--bs-primary) !important;
    font-weight: 600;
    border-color: var(--bs-primary);
    font-size: 1rem !important;
  }

  .ml-form-embedBody .ml-form-horizontalRow button:hover,
  .ml-form-embedBody .ml-form-horizontalRow button:focus-within {
    background-color: rgb(0, 95, 117) !important;
    border-color: rgb(0, 90, 110);
  }

  .ml-form-horizontalRow .ml-input-horizontal {
    width: calc(100% - 9.25rem);
  }

  .ml-form-horizontalRow .ml-button-horizontal {
    margin-left: 2rem;
    width: 7.25rem;
  }
}

/*** General element styling ***/

/* Link styling */
a,
a:not([class]) {
  text-decoration: underline 6%;
  text-decoration-skip-ink: none;
  text-underline-offset: 25%;
  text-underline-position: from-font;
}

a.btn, a.btn:hover, a.btn:focus-within {
  text-decoration: none;
}

a:hover, a:not(.btn):focus-within {
  color: var(--bs-danger);
  text-decoration: underline 6%;
  text-decoration-skip-ink: none;
  text-underline-offset: 25%;
  text-underline-position: from-font;
}

a.social-media-icon {
  font-size: 20px;
  text-decoration: none !important;
  font-weight: 400;
  transition: color 0.1s;
}

a.social-media-icon:hover,
a.social-media-icon:focus-within {
  color: #f7bbd0 !important;
}

.text-light a,
.text-light a:hover,
.text-light a:focus-within {
  color: var(--bs-light);
}

.text-light a:hover,
.text-light a:focus-within {
  text-decoration-style: dashed;
}

.bg-success a,
.bg-success a:hover,
.bg-success a:focus-within {
  color: var(--bs-black);
}

div:focus-visible, a:focus-visible {
  outline: var(--bs-primary) 2px solid;
}

/*** Page elements, top to bottom ***/

/* Header */
.header .navbar-brand img {
  height: 36px;
}

/* Hero image */
.above-content {
  img {
    width: 100%;
    height: 450px;
    object-fit: cover;
  }
}

/* Breadcrumbs */
.breadcrumb {
  font-size: 0.875rem;
  --bs-breadcrumb-divider: "\f105";
  --bs-breadcrumb-divider-color: var(--bs-primary);
  margin-top: 1rem;
}

.breadcrumb-item::before {
  font-family: "Font Awesome 6 Free";
  font-weight: 900;
}


/* Footer */
footer {
  padding: 2rem 5rem;
  /*margin-top: 8.75rem;*/

  .navbar-brand img {
    height: 60px;
  }

  a, a:hover, a:focus-within {
    color: var(--bs-light);
  }

  .block {
    .content ul li {
      margin-right: 2rem;
    }

    .content ul.social-media li {
      margin-right: 0.875rem;
    }
  }

  hr {
    margin-top: 2.5rem;
    margin-bottom: 2.5rem;
    height: 1px;
    opacity: 0.16;
    background: var(--bs-light);
  }

  h3,
  .h6 {
    margin-bottom: 1rem;
  }

  .footer-bottom {
    margin-top: 6rem;
  }
}

iframe {
  max-width: 100%;
}


/* Basic page specific */

/* "On this page" and "Learn more" links boxes */
.layout--colored-flex {

  /* Do not display empty layout region */
  .layout__region:not(:has(.block)) {
    display: none;
  }

  /* Do not display left box if toc is hidden and links not present */
  .layout__region--left:has(.cp-toc[hidden]):not(:has(.block-field-blocknodepagefield-side-links), :has(.block-field-blocknodepagefield-bottom-right-links), :has(.block-field-blocknodepagefield-bottom-left-links)) {
    display: none;
  }

  /* Layout builder - always display with black text */
  .layout__region.layout-builder__region {
    display: block !important;
    color: black !important;

    a {
      color: black !important;
    }
  }

  .layout__region--left,
  .layout__region--right {
    padding: 2rem;
    max-width: 50%;

    ul {
      margin-bottom: 0;
    }
  }

  .layout__region--left:has(.full-width-block),
  .layout__region--right:has(.full-width-block) {
    max-width: 100%;
  }

  /* Left box */
  .layout__region--left {
    a, a:hover, a:focus-within {
      color: var(--bs-light);
    }
  }

  /* Right box */
  .layout__region--right {
    background-color: var(--blue-10);
  }

  .layout__region>.block:not(:first-child) {
    margin-top: 1.5rem;
  }

  /* cp_toc */
  .cp-toc {
    .toc-title {
      margin-bottom: 1.5rem;
    }

    nav ul {
      padding-bottom: 0.5rem;
    }
  }
}

.page .page-content .layout {
  margin-bottom: 2.75rem;
}

.page .page-content .layout--light-blue,
.page .page-content .layout--light-gray,
.fluxes_volume .page-content .layout--light-blue,
.fluxes_volume .page-content .layout--light-gray {
  margin: 0;

  .block:not(.block-system-main-block) {
    max-width: unset;
    padding-left: 0;
    padding-right: 0;
  }

  &>div {
    max-width: 70.5rem;
    margin-left: auto;
    margin-right: auto;
    padding: 1rem;
  }
}

.page .page-content .layout--light-blue,
.fluxes_volume .page-content .layout--light-blue {
  background-color: var(--blue-10);
}

.page .page-content .layout--light-gray,
.fluxes_volume .page-content .layout--light-gray {
  background-color: var(--light-gray);
}

.page.template-full-width .page-content .layout--light-blue,
.page.template-full-width .page-content .layout--light-gray,
.fluxes_volume .page-content .layout--light-blue,
.fluxes_volume .page-content .layout--light-gray {
  &>div {
    max-width: 1400px;
  }
}

/* make three column 33-34-33 evenly spaced, with space between */
@media screen and (min-width: 40em) {
  .layout--threecol-section--33-34-33 {
    gap: 2%;
  }
  .layout--threecol-section--33-34-33 > .layout__region--first,
  .layout--threecol-section--33-34-33 > .layout__region--second,
  .layout--threecol-section--33-34-33 > .layout__region--third {
    flex-basis: 32% !important;
  }
}
/* ... */

